k8s/mongo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: zorin
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: mongo
    spec:
      serviceAccountName: zorin
      containers:
        - image: mongo:8.2
          name: flask-mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      restartPolicy: Always
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: zorin
  labels:
    app: mongo
spec:
  type: ClusterIP
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
